[package]
name = "shoe-store-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.31"
yew = "0.19.3"
web-sys="0.3.58"
